--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link
-      rel="icon"
-      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚽</text></svg>"
-    />
+    <link rel="icon" href="%PUBLIC_URL%/192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#098b54" />
     <meta name="description" content="EM tipskupon for EM 2024" />
-    <link
-      rel="apple-touch-icon"
-      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚽</text></svg>"
-    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Tipskupon - EM 2024</title>
   </head>
