--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/192.png" />
+    <link rel="icon" href="%PUBLIC_URL%/192px.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#098b54" />
     <meta name="description" content="EM tipskupon for EM 2024" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/192px.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Tipskupon - EM 2024</title>
   </head>
